build(deps): upgrade angular from 11.2.7 too 12.0.0

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "aot": true,
             "progress": false,
             "outputPath": ".tmp/frontend",
             "index": "src/app/frontend/index.html",
@@ -90,7 +89,13 @@
               "node_modules/systemjs/dist/s.js",
               "node_modules/systemjs/dist/extras/named-register.js",
               "node_modules/systemjs/dist/extras/amd.js"
-            ]
+            ],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
