--- a/package.json
+++ b/package.json
@@ -87,18 +87,18 @@
     "beautifyOutput": true
   },
   "dependencies": {
-    "@angular/animations": "11.2.7",
+    "@angular/animations": "12.0.0",
     "@angular/cdk": "11.2.7",
-    "@angular/common": "11.2.7",
-    "@angular/compiler": "11.2.7",
-    "@angular/core": "11.2.7",
+    "@angular/common": "12.0.0",
+    "@angular/compiler": "12.0.0",
+    "@angular/core": "12.0.0",
     "@angular/flex-layout": "11.0.0-beta.33",
-    "@angular/forms": "11.2.7",
-    "@angular/localize": "11.2.7",
+    "@angular/forms": "12.0.0",
+    "@angular/localize": "12.0.0",
     "@angular/material": "11.2.7",
-    "@angular/platform-browser": "11.2.7",
-    "@angular/platform-browser-dynamic": "11.2.7",
-    "@angular/router": "11.2.7",
+    "@angular/platform-browser": "12.0.0",
+    "@angular/platform-browser-dynamic": "12.0.0",
+    "@angular/router": "12.0.0",
     "@swimlane/ngx-charts": "17.0.1",
     "ace-builds": "1.4.12",
     "angular-page-visibility": "11.0.0",
@@ -124,13 +124,13 @@
     "web-animations-js": "2.3.2",
     "xterm": "4.11.0",
     "xterm-addon-fit": "0.5.0",
-    "zone.js": "0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.12",
-    "@angular/cli": "11.2.12",
-    "@angular/compiler-cli": "11.2.7",
-    "@angular/language-service": "11.2.12",
+    "@angular-devkit/build-angular": "12.0.0",
+    "@angular/cli": "12.0.0",
+    "@angular/compiler-cli": "12.0.0",
+    "@angular/language-service": "12.0.0",
     "@babel/core": "7.14.0",
     "@babel/preset-env": "7.14.1",
     "@babel/register": "7.13.16",
@@ -182,7 +182,7 @@
     "through2": "4.0.2",
     "ts-loader": "8.1.0",
     "ts-node": "9.1.1",
-    "typescript": "4.1.5",
+    "typescript": "4.2.4",
     "wait-on": "5.3.0",
     "webpack-dev-server": "3.11.2"
   },
